master: fix bg spotlight jump

--- a/src/styles/_shared.scss
+++ b/src/styles/_shared.scss
@@ -12,7 +12,7 @@
   pointer-events: none;
   will-change: transform;
   opacity: 0;
-  transition: opacity 0.4s ease;
+  transition: opacity 0.4s ease, transform 0.25s cubic-bezier(0.165, 0.84, 0.44, 1);
   top: -300px;
   left: -300px;
   z-index: 0;
